<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">W8byMB6pZqbWaiC0WlyVcIPOWBSeDTG48grCzJMo</string>
    <string name="parse_client_key">NMa4pYUmY1R33W82RKFmXtHnWGQTyIpUOT9cUbyu</string>
    <string name="facebook_app_id">1462336064086407</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>

    <string name="app_name">Memos</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="confirm_password_prompt">Please confirm your password:</string>
    <string name="error_prefix">"Please "</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="error_name">enter a username</string>
    <string name="error_password">enter a password</string>
    <string name="password_mismatch">enter the same password twice</string>
    <string name="memo_prompt">Input your memo:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_new">New Memo</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Log Out</string>
    <string name="action_login">Log In</string>
    <string name="login_title">Please log in or sign up to sync your todos to your account.</string>
    <string name="no_items">No items, click + to started adding memos.</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in">Welcome, %1$s</string>
    <string name="title_activity_list_memo">ListMemoActivity</string>

</resources>
