<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.parse.starter.ListMemoActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"></item>

    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync"></item>

    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout"></item>

    <item
        android:id="@+id/action_login"
        android:showAsAction="never"
        android:title="@string/action_login"></item>

</menu>
